# trials-modern

./: .gitignore  README.md  pyproject.toml
Data/U.S.S&P500/: test_rolling_1.csv  valid_rolling_1.csv
Scripts/: baseline_pairs.py  callbacks.py  feature_extractor.py  main.py  model_eval.py  pairSelectionEnv.py  pairTradingEnv.py  policy_network.py  trading_train.py  utils.py
