[project]
name = "trials-modern"
version = "0.1.0"
description = "trials-modern is a modified version of trials using Gymnasium, implementing the Select and Trade paper on pair trading via hierarchical reinforcement learning, with updated libraries."
authors = [
    {name = "Lowie Peelaers"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "gymnasium (>=1.1.1)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "stable-baselines3 (>=2.6.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "wandb (>=0.21.0,<0.22.0)",
    "empyrical (>=0.5.5,<0.6.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
]

[tool.poetry]
package-mode = false


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
